--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1 align="center">Afterburner</h1>
     <nav align="center">
-        <a href="Index.html">Home</a> |
+        <a href="index.html">Home</a> |
         <a href="Events.html">Events</a> |
         <a href="Gallery.html">Gallery</a> |
     </nav>
