--- a/Assignment 2/Events.html
+++ b/Assignment 2/Events.html
@@ -9,8 +9,8 @@
 <h1 align="center">Afterburner</h1>
     <nav align="center"> 
         <a href="index.html">Home</a> |
-        <a href="Events.html">Events</a> |
-        <a href="Gallery.html">Gallery</a> |
+        <a href="events.html">Events</a> |
+        <a href="gallery.html">Gallery</a> |
     </nav>
 <center><a href="mailto:shakin@temasekclub.org.sg? target="_top">Email for enquiry</a></center>
     <h2 align="center"><ins>Events and program</h2></ins>
