--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -12,8 +12,8 @@
 <h1 align="center">Afterburner</h1>
     <nav align="center">
         <a href="index.html">Home</a> |
-        <a href="Events.html">Events</a> |
-        <a href="Gallery.html">Gallery</a> |
+        <a href="events.html">Events</a> |
+        <a href="gallery.html">Gallery</a> |
     </nav>
  
 <h2 align="center"> <ins>Welcome to Afterburner</ins> </h2>
